# itypewriter

./: LICENSE  README.md  README.rst  pyproject.toml
.github/workflows/: python-package.yml  python-publish.yml
itypewriter/: __init__.py  itypewriter.py
tests/: test_itypewriter.py
