[tool.poetry]
name = "itypewriter"
version = "0.0.1"
description = "iTypewriter - print text a character at a time,like typewriting."
authors = ["Jesse E.Agbe(JCharis) <jcharistech@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/Jcharis/itypewriter"
repository = "https://github.com/Jcharis/itypewriter"
keywords = ["iTypewriter","itypewriter","typewriter",
"typewrite","character a a time","chat","iterative chat",
"jcharistech", "clean text", "text preprocessing","text cleaning","ftfy","pandas","normalize"]

classifiers=[
        "License :: OSI Approved :: MIT License",
        "Programming Language :: Python :: 3",
        "Programming Language :: Python :: 3.6",
        "Programming Language :: Python :: 3.7",
        "Programming Language :: Python :: 3.8",
        "Programming Language :: Python :: 3.9",
        "Programming Language :: Python :: 3.10",
        "Operating System :: OS Independent",
    ]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
